[metadata]
name = transmission_models
version = 0.1.0
description = A Python package for transmission modeling and phylogenetic analysis
long_description = file: README.md
long_description_content_type = text/markdown
author = Your Name
author_email = your.email@example.com
license = MIT
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Topic :: Scientific/Engineering :: Bio-Informatics
project_urls =
    Homepage = https://github.com/yourusername/transmission_models
    Repository = https://github.com/yourusername/transmission_models
    Documentation = https://transmission-models.readthedocs.io/

[options]
packages = find:
package_dir =
    = src
python_requires = >=3.8
install_requires =
    numpy
    pandas
    scipy
    matplotlib
    seaborn

[options.packages.find]
where = src

[options.package_data]
transmission_models = data/*

[options.extras_require]
dev =
    pytest
    pytest-cov
    black
    flake8
    mypy
docs =
    sphinx
    sphinx-rtd-theme 